--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ enable_testing()
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
+SET(COVERAGE OFF CACHE BOOL "Coverage")
 
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/AM2901A)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/AM2901A_ASM)
@@ -14,6 +15,11 @@ add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/AM2901A_ASM)
 if (BUILD_TESTING)
 	add_subdirectory(third-party/gtest)
 	add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/tests)
+endif()
+
+if (COVERAGE)
+    target_compile_options(tests PRIVATE --coverage)
+    target_link_libraries(tests PRIVATE --coverage)
 endif()
 
 install(TARGETS asm_am2901a DESTINATION bin)
