--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.16 FATAL_ERROR)
 
 project(am2901a VERSION 0.0.1.0)
 
+include(gtest.cmake)
+
 enable_testing()
 
 set(CMAKE_CXX_STANDARD 20)
@@ -17,7 +19,11 @@ if (BUILD_TESTING)
 	add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/tests)
 endif()
 
+find_package (Threads)
+target_link_libraries(third-party/gtest ${CMAKE_THREAD_LIBS_INIT})
+
 if (COVERAGE)
+    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/tests)
     target_compile_options(${CMAKE_CURRENT_SOURCE_DIR}/tests PRIVATE --coverage)
     target_link_libraries(${CMAKE_CURRENT_SOURCE_DIR}/tests PRIVATE --coverage)
 endif()
