--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,10 +14,9 @@ add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/AM2901A)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/AM2901A_ASM)
 
 find_package (Threads)
-target_link_libraries(gltest ${CMAKE_THREAD_LIBS_INIT})
+target_link_libraries(third-party/gtest ${CMAKE_THREAD_LIBS_INIT})
 
 if (BUILD_TESTING && COVERAGE)
-	add_subdirectory(third-party/gtest)
 	add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/tests)
 	target_compile_options(${CMAKE_CURRENT_SOURCE_DIR}/tests PRIVATE --coverage)
         target_link_libraries(${CMAKE_CURRENT_SOURCE_DIR}/tests PRIVATE --coverage)
