--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/AM2901A)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/AM2901A_ASM)
 
 find_package (Threads)
-target_link_libraries(third-party ${CMAKE_THREAD_LIBS_INIT})
+target_link_libraries(${CMAKE_CURRENT_SOURCE_DIR}/third-party ${CMAKE_THREAD_LIBS_INIT})
 
 if (BUILD_TESTING && COVERAGE)
 	add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/tests)
