--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,13 +13,15 @@ SET(COVERAGE OFF CACHE BOOL "Coverage")
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/AM2901A)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/AM2901A_ASM)
 
-find_package (Threads)
 target_link_libraries(${CMAKE_CURRENT_SOURCE_DIR}/third-party ${CMAKE_THREAD_LIBS_INIT})
 
 if (BUILD_TESTING && COVERAGE)
+	find_package (Threads)
 	add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/tests)
+	add_subdirectory(third-party/gtest)
 	target_compile_options(${CMAKE_CURRENT_SOURCE_DIR}/tests PRIVATE --coverage)
         target_link_libraries(${CMAKE_CURRENT_SOURCE_DIR}/tests PRIVATE --coverage)
+	target_link_libraries(${CMAKE_CURRENT_SOURCE_DIR}/third-party/gtest ${CMAKE_THREAD_LIBS_INIT})
 endif()
 
 install(TARGETS asm_am2901a DESTINATION bin)
