--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,9 +17,12 @@ if (BUILD_TESTING)
 	find_package (Threads)
 	add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/tests)
 	add_subdirectory(third-party/gtest)
-	target_compile_options(${CMAKE_CURRENT_SOURCE_DIR}/tests PRIVATE --coverage)
-        target_link_libraries(${CMAKE_CURRENT_SOURCE_DIR}/tests PRIVATE --coverage)
 	target_link_libraries(${CMAKE_CURRENT_SOURCE_DIR}/third-party/gtest ${CMAKE_THREAD_LIBS_INIT})
+endif()
+
+if (COVERAGE)
+    target_compile_options(tests PRIVATE --coverage)
+    target_link_libraries(tests PRIVATE --coverage)
 endif()
 
 install(TARGETS asm_am2901a DESTINATION bin)
